# urBackend

./: .gitignore  AGENTS.md  ARCHITECTURE_DIAGRAM.md  DEPLOYMENT.md  LICENSE.md  README.md  package-lock.json  package.json
apps/dashboard-api/src/: app.js
apps/dashboard-api/src/__tests__/: auth.controller.test.js  webhook.controller.test.js
apps/dashboard-api/src/controllers/: analytics.controller.js  auth.controller.js  billing.controller.js  project.controller.js  userAuth.controller.js  webhook.controller.js
apps/dashboard-api/src/middlewares/: planEnforcement.js
apps/dashboard-api/src/routes/: billing.js  projects.js  webhooks.js
apps/public-api/: package.json
apps/public-api/src/: app.js
apps/public-api/src/__tests__/: data.controller.read.test.js  storage.controller.test.js  userAuth.refresh.test.js
apps/web-dashboard/: index.html  package.json
apps/web-dashboard/src/: App.jsx  index.css
backend/: app.js  test_schemas.js
backend/controllers/: auth.controller.js  project.controller.js  schema.controller.js  userAuth.controller.js
backend/routes/: schemas.js
backend/utils/: input.validation.js
docs/: SUMMARY.md  api-reference.md  authentication.md  database.md  getting-started.md  introduction.md  security.md
examples/sdk-kanban/client/: vite.config.js
frontend/src/pages/: Auth.jsx
mintlify/docs/sdk/: auth.mdx  mail.mdx
sdks/urbackend-python/: .gitignore  README.md  pyproject.toml
sdks/urbackend-python/tests/: __init__.py  test_auth.py  test_db.py  test_http.py
sdks/urbackend-python/urbackend/: auth.py  client.py  db.py  http.py  mail.py  storage.py
sdks/urbackend-sdk/: package.json
(+30 files in other folders)
